// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals Actions .getEngagementRecency by default 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": undefined,
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/cohort-engagement/",
    },
    "type": "GET_ENGAGEMENT_RECENCY",
  },
]
`;

exports[`Signals Actions .getHealthScore by default 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": undefined,
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/health-score/",
    },
    "type": "GET_HEALTH_SCORE",
  },
]
`;

exports[`Signals Actions .getSpamHits by default 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": undefined,
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;

exports[`Signals Actions .getSpamHits with a facet 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": undefined,
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/sending-domain",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;

exports[`Signals Actions .getSpamHits with a filter 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": "examp",
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": undefined,
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;

exports[`Signals Actions .getSpamHits with a limit 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": 100,
        "offset": undefined,
        "order": undefined,
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;

exports[`Signals Actions .getSpamHits with a offset 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": undefined,
        "offset": 9,
        "order": undefined,
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;

exports[`Signals Actions .getSpamHits with a order by subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": "asc",
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;

exports[`Signals Actions .getSpamHits with a order field that needs to be mapped 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": "asc",
        "order_by": "trap_hits",
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;

exports[`Signals Actions .getSpamHits with a subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {
        "x-msys-subaccount": 123,
      },
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": undefined,
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;

exports[`Signals Actions .getSpamHits with a subaccount facet 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {
        "x-msys-subaccount": 123,
      },
      "method": "GET",
      "params": Object {
        "filter": "",
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": undefined,
        "order_by": undefined,
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;

exports[`Signals Actions .getSpamHits with an order 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "filter": undefined,
        "from": "2018-01-12",
        "limit": undefined,
        "offset": undefined,
        "order": "asc",
        "order_by": "example_field",
        "to": "2018-01-13",
      },
      "showErrorAlert": false,
      "url": "/v1/signals/spam-hits/",
    },
    "type": "GET_SPAM_HITS",
  },
]
`;
